--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/imagekit": "^3.1.5",
     "argon2": "^0.40.1",
+    "cookie-parser": "^1.4.6",
     "imagekit": "^5.0.0",
     "mongoose": "^8.2.1",
     "reflect-metadata": "^0.1.13",
@@ -38,6 +39,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
