--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@types/imagekit": "^3.1.5",
     "argon2": "^0.40.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.7",
     "imagekit": "^5.0.0",
     "mongoose": "^8.2.1",
+    "postgres": "^3.4.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4"
@@ -47,6 +50,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
