--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.4",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@supabase/supabase-js": "^2.42.3",
     "@types/imagekit": "^3.1.5",
     "argon2": "^0.40.1",
     "cookie-parser": "^1.4.6",
@@ -35,6 +37,8 @@
     "drizzle-orm": "^0.30.7",
     "imagekit": "^5.0.0",
     "mongoose": "^8.2.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -44,11 +48,14 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.13",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
