--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.4",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/ form-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/websockets": "^10.3.8",
     "@types/imagekit": "^3.1.5",
