--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/websockets": "^10.3.8",
     "@types/imagekit": "^3.1.5",
+    "@types/uuid": "^9.0.8",
     "argon2": "^0.40.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
@@ -42,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
