--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/websockets": "^10.3.8",
     "@swc/jest": "^0.2.36",
     "@types/imagekit": "^3.1.5",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.8",
     "argon2": "^0.40.1",
     "cookie-parser": "^1.4.6",
